--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -6,32 +6,51 @@ body {
 }
 
 header {
-	background-color: #f1f1f1;
-	padding: 30px;
+    background-color: black;
+}
+header img{
+    padding-top: 50px;
+    padding-bottom: 50px;
+    width: 100%;
 }
 
 nav {
 	overflow: hidden;
-	background-color: #333;
+	background-color: black;
 }
-
 nav a {
 	float: left;
 	display: block;
-	color: #f2f2f2;
+	color: gray;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
 	font-size: 17px;
+    width:20%;
 }
-
 nav a:hover {
 	background-color: #ddd;
 	color: black;
 }
 
-nav a.active {
-	background-color: #4CAF50;
+#home.active{
+    background-color: DarkGray;
+	color: white;
+}
+#section1.active{
+    background-color: DarkGray;
+	color: white;
+}
+#section2.active{
+    background-color: DarkGray;
+	color: white;
+}
+#section3.active{
+    background-color: DarkGray;
+	color: white;
+}
+#section4.active{
+    background-color: DarkGray;
 	color: white;
 }
 
@@ -69,14 +88,33 @@ footer p a:hover {
 
 
 .content {
-    background-color: SeaShell;
-	padding: 16px;
+    /*SeaShell*/;
+	padding-top: 16px;
+    padding-right: 16px;
+    padding-left: 16px;
     margin-right: 50px;
     margin-left: 50px;
 }
 
-.box {
+.block {
+    background-color: SeaShell;
+    padding: 20px;
+    margin-bottom: 50px;
+    border-radius: 15px;
+}
 
+.block h3 {
+    font-weight: bold;
+}
+
+.box {
+    background-color: GhostWhite;
+    border-radius: 50px;
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 25px;
+
+    padding:100px;
 }
 
 
